--- a/index.html
+++ b/index.html
@@ -7,19 +7,40 @@
 
 <body>
 
-	<h1>CV</h1>
+	<h1 style="text-align: center">CV</h1>
 
-	<p>Gros Ciprian</p>
+	<p>Gros Ciprian</p> 
 
 	<p>Absolvent Educatie fizica si sport</p>
 
+ <div>
 	<h2>Skills:</h2>
 	<ul>
-		<li>HTML</li>
-		<li>CSS</li>
-		<li>JS</li>
+	<li>HTML</li>
+	<li>CSS</li>
+	<li>JS</li>
+	</div>
 	</ul>
-
+	<div>
+	<h2>Languages</h2>
+	<table border="1">
+  	<tr>
+	   <td>Romana</td>
+	   <td>-nativ</td>
+	 </tr>
+	</table>
+	<table border="1">
+   <tr>
+	   <td>Engleza</td>
+	   <td>-medium</td>
+	  </tr>
+	</table>
+	</div>
+  <h3>Contact</h3>
+	<form>
+		<label>leul_focului@yahoo.com</label>
+		<input name="recruterEmail" type="email">
+		<button>send</button>
 
 	<div id="app"></div>
 
