--- a/index.html
+++ b/index.html
@@ -3,48 +3,65 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<link href="css/style.css">
 </head>
 
 <body>
-
 	<h1 style="text-align: center">CV</h1>
 
-	<p>Gros Ciprian</p> 
+	<p>Gros Ciprian</p>
 
 	<p>Absolvent Educatie fizica si sport</p>
 
- <div>
-	<h2>Skills:</h2>
-	<ul>
-	<li>HTML</li>
-	<li>CSS</li>
-	<li>JS</li>
+<ul id="top-menu-bar">
+	<li>
+		<a href="#">Home</a>
+		</li>
+		<li>
+			<a href="#">Skills</a>
+		</li>
+		<li>
+			<a href="#">Languages</a>
+		</li>
+		<li>
+			<a href="#">Contact</a>
+		</li>
+				</ul>
+	<div class="page-block">
+		<h2>Skills:</h2>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JS</li>
 	</div>
-	</ul>
-	<div>
-	<h2>Languages</h2>
-	<table border="1">
-  	<tr>
-	   <td>Romana</td>
-	   <td>-nativ</td>
-	 </tr>
-	</table>
-	<table border="1">
-   <tr>
-	   <td>Engleza</td>
-	   <td>-medium</td>
-	  </tr>
-	</table>
+
+
+	<div class="page-block">
+		</ul>
+		<h2>Languages</h2>
+		<table border="1">
+			<tr>
+				<td>Romana</td>
+				<td>-nativ</td>
+			</tr>
+		</table>
+		<table border="1">
+			<tr>
+				<td>Engleza</td>
+				<td>-medium</td>
+			</tr>
+		</table>
 	</div>
-  <h3>Contact</h3>
+
+	<h3>Contact</h3>
 	<form>
 		<label>leul_focului@yahoo.com</label>
 		<input name="recruterEmail" type="email">
 		<button>send</button>
 
-	<div id="app"></div>
+		<div id="app"></div>
 
-	<script src="src/index.js"></script>
+		<script src="src/index.js"></script>
 </body>
 
 </html>
