--- a/index.html
+++ b/index.html
@@ -7,15 +7,33 @@
 </head>
 
 <body>
+
+	<div class="test" id="header">Header</div>
+	<div class="test" id="content-wrap">
+		<div class="test" id="left-sidebar">
+			<div class="test" id="news">News</div>
+			<div class="test" id="contact">Contact</div>
+		</div>
+		<div class="test" id="content">
+			Content <br> orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+			standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+			specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+			unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+			recently with desktop 
+			<br> 
+		</div>
+	</div>
+	<div class="test" id="footer">Footer</div>
+
 	<h1 style="text-align: center">CV</h1>
 
 	<p>Gros Ciprian</p>
 
 	<p>Absolvent Educatie fizica si sport</p>
 
-<ul id="top-menu-bar">
-	<li>
-		<a href="#">Home</a>
+	<ul id="top-menu-bar">
+		<li>
+			<a href="#">Home</a>
 		</li>
 		<li>
 			<a href="#">Skills</a>
@@ -26,7 +44,7 @@
 		<li>
 			<a href="#">Contact</a>
 		</li>
-				</ul>
+	</ul>
 	<div class="page-block">
 		<h2>Skills:</h2>
 		<ul>
