--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 	<div class="test" id="footer">Footer</div>
 
 	<h1 style="text-align: center">CV</h1>
+	<img src="https://scontent.fsbz1-2.fna.fbcdn.net/v/t31.0-8/11891885_885659818175429_3411248048302416056_o.jpg?_nc_cat=102&_nc_ht=scontent.fsbz1-2.fna&oh=7c3055ff1f565f77b1945fdbcfc62cde&oe=5C5A55C3" width="200"/> 
 
 	<p>Gros Ciprian</p>
 
-	<p>Absolvent Educatie fizica si sport</p>
+	<p>Absolvent: Faculty of Physical Education and Sport, Babes-Bolyai University</p>
 
 	<ul id="top-menu-bar">
 		<li>
@@ -39,6 +40,9 @@
 			<a href="#">Skills</a>
 		</li>
 		<li>
+			<a href="#">Experience</a>
+		</li>		
+	  <li>
 			<a href="#">Languages</a>
 		</li>
 		<li>
@@ -53,10 +57,20 @@
 			<li>JS</li>
 	</div>
 
+	<div class="page-block">
+		<h2>Experience:</h2>
+		<ul>
+			<li>Sales assistant H&M, Stoke-on-Trent, England</li>
+			August 2016-October 2016
+			<li>Sales assistant TK Maxx, Stoke-on-Trent, England</li>
+			July 2017-October 2017
+
+
+		</div>
 
 	<div class="page-block">
 		</ul>
-		<h2>Languages</h2>
+		<h2>Languages:</h2>
 		<table border="1">
 			<tr>
 				<td>Romana</td>
@@ -66,7 +80,7 @@
 		<table border="1">
 			<tr>
 				<td>Engleza</td>
-				<td>-medium</td>
+				<td>-avansat</td>
 			</tr>
 		</table>
 	</div>
