--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
 		<!-- <script src="src/index.js"></script> -->
 			<div id="app"></div>
+			<script src="js/learn.js"></script>
+
 </body>
 
 </html>
