--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
-	<link href="css/style.css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -18,13 +18,13 @@
 		<p>Absolvent: Faculty of Physical Education and Sport, Babes-Bolyai University</p>
 			<ul id="top-menu-bar">
 				<li>
-					<a href="#">Home</a>
+					<a href="#" id="home-menu">Home</a>
 				</li>
 				<li>
-					<a href="#">Skills</a>
+					<a href="#" id="skills-menu">Skills</a>
 				</li>
 				<li>
-					<a href="#">Languages</a>
+					<a href="#" id="languages-menu">Languages</a>
 				</li>
 				<li>
 					<a href="#">Contact</a>
@@ -41,21 +41,25 @@
 								<input name="recruterEmail" type="email">
 								<button>send</button>
 							</form>
-						</div>
-				</div>
-		
+			</div>
+		</div>
+	</div>	
 		<div class="test" id="content">
-					<div class="page-block">
-						<h2>Skills:</h2>
+			<div class="test">
+                <div class="page-block" id="home-page">
+				     <h2>Wellcome</h2>
+				     <p>About me.....</p>
+				</div>
+				<div class="page-block" id="skills-page" style="display: none;">
+					<h2>Skills:</h2>
 						<ul>
 							<li>HTML</li>
 							<li>CSS</li>
 							<li>JS</li>
 						</ul>
-					</div>
-					
-					<div class="page-block">
-						<h2>Languages:</h2>
+				</div>
+				<div class="page-block" id="languages-page" style="display: none;">
+					<h2>Languages:</h2>
 						<table border="1">
 							<tr>
 								<td>Romana</td>
@@ -63,17 +67,16 @@
 							</tr>
 							<tr>
 								<td>Engleza</td>
-								<td>-avansat</td>
+								<td>Avansat</td>
 							</tr>
 						</table>
-					</div>
-					
-		</div>
+				</div>
+		    </div>
 		</div>
 
 	<div class="test" id="footer">Linkedin | Github</div>
 
-		<!-- <script src="src/index.js"></script> -->
+		<script src="src/index.js"></script>
 			<div id="app"></div>
 			<script src="js/learn.js"></script>
 
