--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 					<a href="#" id="languages-menu">Languages</a>
 				</li>
 				<li>
+					<a href="#" id="education-menu">Education</a>
+				</li>
+				<li>
 					<a href="#">Contact</a>
 				</li>
 			</ul>
@@ -58,6 +61,13 @@
 							<li>JS</li>
 						</ul>
 				</div>
+				<div class="page-block" id="education-page" style="display: none;">
+						<h2>Education:</h2>
+							<ul>
+								<li>UBB Educatie fizica si sport Licence</li>
+								<li>Liceul Teoretic</li>
+							</ul>
+					</div>
 				<div class="page-block" id="languages-page" style="display: none;">
 					<h2>Languages:</h2>
 						<table border="1">
