--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 		<p>Absolvent: Faculty of Physical Education and Sport, Babes-Bolyai University</p>
 			<ul id="top-menu-bar">
 				<li>
-					<a href="#" id="home-menu">Home</a>
+					<a href="#" id="home-menu" data-page="home">Home</a>
 				</li>
 				<li>
-					<a href="#" id="skills-menu">Skills</a>
+					<a href="#" id="skills-menu" data-page="skills">Skills</a>
 				</li>
 				<li>
-					<a href="#" id="languages-menu">Languages</a>
+					<a href="#" id="languages-menu" data-page="languages">Languages</a>
 				</li>
 				<li>
-					<a href="#" id="education-menu">Education</a>
+					<a href="#" id="education-menu" data-page="education">Education</a>
 				</li>
 				<li>
 					<a href="#">Contact</a>
@@ -53,7 +53,7 @@
 				     <h2>Wellcome</h2>
 				     <p>About me.....</p>
 				</div>
-				<div class="page-block" id="skills-page" style="display: none;">
+				<div class="page-block" id="skills-page" >
 					<h2>Skills:</h2>
 						<ul>
 							<li>HTML</li>
@@ -61,14 +61,15 @@
 							<li>JS</li>
 						</ul>
 				</div>
-				<div class="page-block" id="education-page" style="display: none;">
+				<div class="page-block" id="education-page" >
 						<h2>Education:</h2>
 							<ul>
 								<li>UBB Educatie fizica si sport Licence</li>
 								<li>Liceul Teoretic</li>
-							</ul>
+
+					        </ul>
 					</div>
-				<div class="page-block" id="languages-page" style="display: none;">
+				<div class="page-block" id="languages-page">
 					<h2>Languages:</h2>
 						<table border="1">
 							<tr>
