--- a/index.html
+++ b/index.html
@@ -7,33 +7,30 @@
 </head>
 
 <body>
-
-	
-
-	<div class="test" id="header">
+    <div class="test" id="header">
 		<h1 style="text-align: center">CV</h1>
-					
+
 		<p style="text-align: right; color: darkblue">Gros Ciprian</p>
-		<img id="my-picture" width="100" src="https://scontent.fsbz1-2.fna.fbcdn.net/v/t31.0-8/11891885_885659818175429_3411248048302416056_o.jpg?_nc_cat=102&_nc_ht=scontent.fsbz1-2.fna&oh=7c3055ff1f565f77b1945fdbcfc62cde&oe=5C5A55C3" width="200"/> 
-		
-		    <p id="motto">Absolvent: Faculty of Physical Education and Sport, Babes-Bolyai University</p>
-			<ul id="top-menu-bar">
-				<li>
-					<a href="#" data-page="home">Home</a>
-				</li>
-				<li>
-					<a href="#" data-page="skills">Skills</a>
-				</li>
-				<li>
-					<a href="#" data-page="languages">Languages</a>
-				</li>
-				<li>
-					<a href="#" data-page="education">Education</a>
-				</li>
-				<li>
-					<a href="#" data-page="experience">Experience</a>
-				</li>
-			</ul>
+		<img id="my-picture" width="200" src="https://scontent.fsbz1-2.fna.fbcdn.net/v/t31.0-8/11891885_885659818175429_3411248048302416056_o.jpg?_nc_cat=102&_nc_ht=scontent.fsbz1-2.fna&oh=7c3055ff1f565f77b1945fdbcfc62cde&oe=5C5A55C3">
+
+		<p id="motto">Absolvent: Faculty of Physical Education and Sport, Babes-Bolyai University</p>
+		<ul id="top-menu-bar">
+			<li>
+				<a href="#" data-page="home">Home</a>
+			</li>
+			<li>
+				<a href="#" data-page="skills">Skills</a>
+			</li>
+			<li>
+				<a href="#" data-page="languages">Languages</a>
+			</li>
+			<li>
+				<a href="#" data-page="education">Education</a>
+			</li>
+			<li>
+				<a href="#" data-page="experience">Experience</a>
+			</li>
+		</ul>
 	</div>
 
 	<div class="test" id="content-wrap">
@@ -44,65 +41,63 @@
 				<p>Hire me!</p>
 				<form>
 					<label>Your email</label>
-					    <input name="recruterEmail" type="email">
-						<button>send</button>
-				</form>				
+					<input name="recruterEmail" type="email">
+					<button>send</button>
+				</form>
 			</div>
 		</div>
-	</div>	
-		<div class="test" id="content">
-			<div class="test" id="inner-content">
-                <div class="page-block" id="home-page">
-				     <h2>Wellcome</h2>
-				     <p>About me.....</p>
-				</div>
+	</div>
+	<div class="test" id="content">
+		<div class="test" id="inner-content">
+			<div class="page-block" id="home-page">
+				<h2>Wellcome</h2>
+				<p>About me.....</p>
+			</div>
 
-				<div class="page-block" id="skills-page" >
-					<h2>Skills:</h2>
-					<ul>
-						<li class="favorite">HTML</li>
-						<li>CSS</li>
-						<li class="favorite">JS</li>
-					</ul>
-				</div>
+			<div class="page-block" id="skills-page">
+				<h2>Skills:</h2>
+				<ul>
+					
+				</ul>
+			</div>
 
-				<div class="page-block" id="education-page" >
-					<h2>Education:</h2>
-					<ul>
-								<li>UBB Educatie fizica si sport Licence</li>
-								<li>Liceul Teoretic</li>
+			<div class="page-block" id="education-page">
+				<h2>Education:</h2>
+				<ul>
+					<li>UBB Educatie fizica si sport Licence</li>
+					<li>Liceul Teoretic</li>
+				</ul>
+			</div>
 
-					</ul>
-				</div>
-
-				<div class="page-block" id="languages-page">
-					<h2>Languages:</h2>
-					<table border="1">
-						<tr>
-							<td>Romana</td>
-							<td>Nativ</td>
-						</tr>
-						<tr>
-							<td>Engleza</td>
-							<td>Avansat</td>
-						</tr>
-					</table>
-				</div>
-				<div id="experience-page" class="page-block"></div>
-				     <h2>Experience</h2>
-				     <p>...</p>
-		    </div>
+			<div class="page-block" id="languages-page">
+				<h2>Languages:</h2>
+				<table border="1">
+					<tr>
+						<td>Romana</td>
+						<td>Nativ</td>
+					</tr>
+					<tr>
+						<td>Engleza</td>
+						<td>Avansat</td>
+					</tr>
+				</table>
+			</div>
+		<div class="page-block" id="experience-page" >
+			<h2>Experience</h2>
+			<p>...</p>
 		</div>
+	</div>
 
 	<div class="test" id="footer">
 		<a href="https://www.linkedin.com/in/ciprian-gros-731771171/">linkedin</a>
+		|
 		<a href="https://github.com/Ciprian1997">github</a>
 	</div>
 
 	<div id="app"></div>
 
-<!--<script src="js/learn.js"></script>-->
-    <script src="src/index.js"></script>
+	<!--<script src="js/learn.js"></script>-->
+	<script src="src/index.js"></script>
 </body>
 
 </html>
