--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
 			</div>
 		<div class="page-block" id="experience-page" >
 			<h2>Experience</h2>
-			<p>...</p>
+			<ul>
+				<li>H&M Stoke-on-Trent - august 2016 - october 2016</li>
+				<li>Tk maxx Stoke-on-Trent - august 2017 - october 2017</li>
+			</ul>
 		</div>
 	</div>
 
